--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "concurrently": "^4.1.1",
     "envfile": "^3.0.0",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "react-bootstrap": "^1.0.0-beta.10"
   }
 }
